@@ -105,5 +105,16 @@
         <long>Locks Epiphany in fullscreen mode.</long>
         </locale>
       </schema>
+      <schema>
+        <key>/schemas/apps/epiphany/lockdown/disable_quit</key>
+        <applyto>/apps/epiphany/lockdown/disable_quit</applyto>
+        <owner>epiphany</owner>
+        <type>bool</type>
+        <default>0</default>
+        <locale name="C">
+        <short>Epiphany cannot quit</short>
+        <long>User is not allowed to close Epiphany</long>
+        </locale>
+      </schema>
     </schemalist>
 </gconfschemafile>
