@@ -1,3 +1,9 @@
+2005-09-25  Jean-François Rameau  <jframeau@cvs.gnome.org>
+
+	* data/epiphany-lockdown.schemas.in:
+
+	Add disable_quit to lockdown gconf schema. Fix bug 316499.
+
 2005-09-24  Crispin Flowerday  <gnome@flowerday.cx>
 
 	* data/epiphany.m4:
